# SezorApp

./: CMakeLists.txt
SenzorReader/: CMakeLists.txt
SenzorReader/inc/: IPCInterface.h  SenzorReader.hpp
SenzorReader/src/: SenzorReader.cpp  SenzorReader.cpp.autosave  main.cpp
SenzorSimulator/: CMakeLists.txt
SenzorSimulator/inc/: SenzorSimulator.hpp
SenzorSimulator/src/: IPCInterface.cpp  SenzorSimulator.cpp  main.cpp
